// Copyright 2020-2022 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.alpha.registry.v1alpha1;

import "buf/alpha/module/v1alpha1/module.proto";
import "buf/alpha/registry/v1alpha1/module.proto";

// PushService is the Push service.
service PushService {
  // Push pushes.
  rpc Push(PushRequest) returns (PushResponse);
}

message PushRequest {
  string owner = 1;
  string repository = 2;
  string branch = 3;
  buf.alpha.module.v1alpha1.Module module = 4;
  // Optional; if provided, the provided tags
  // are created for the pushed commit.
  repeated string tags = 5;
  // Optional; if provided, the pushed commit
  // will be appended to these tracks. If the
  // tracks do not exist, they will be created.
  repeated string tracks = 6;
}

message PushResponse {
  LocalModulePin local_module_pin = 5;
}
